# msf-pyflink-job

./: .gitignore  README.md  main-local.py  main.py  pom-kafka-s3.xml  pom.xml  prompt.md  pyproject.toml  quick_start.py  setup_database.py
assembly/: assembly.xml
docs/: PROJECT_SUMMARY.md
examples/: demo_pyflink_workflow.py  quick_start.py
src/: flink_manager.py  main-debezium-doris.py  main-debezium-iceberg.py  main-debezium-mysql.py  main-kafka-iceberg.py  main-kafka-s3.py  main-mysql.py  main.py  pyflink_sql_job.py  requirements.txt
src/main/java/org/apache/flink/runtime/util/: HadoopUtils.java
