[project]
name = "msf-pyflink-job"
version = "1.0.0"
description = "AWS Managed Service for Apache Flink PyFlink Job Examples"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "apache-flink==1.20.0",
    "boto3>=1.35.0",
    "setuptools>=75.0.0",
    "pymysql>=1.1.0",
    "kafka-python-ng>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]
